--- a/Index.html
+++ b/Index.html
@@ -58,7 +58,7 @@
             </div>
         
             <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-              <h1 class="display-4 fw-normal">YOUR CITY ? <span id = "cityname"></span></h1>
+              <h1 class="display-4 fw-normal"><span id = "cityname"></span></h1>
             </div>
           </header>
         <main>
