--- a/Index.html
+++ b/Index.html
@@ -32,7 +32,7 @@
                 <a class="nav-link active" aria-current="page" href="#">Weather-News</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="https://www.linkedin.com/in/muthu-kesavan-s-95425821b/">Contact</a>
+                <a class="nav-link" href="mailto:muthukesavan6044@gmail.com">Contact</a>
               </li>
               
               
