--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
         display: block;
         color: black;
         margin: 5px;
-        background-image: url('weatherimg.jpg');
+        background-image: url('A beautiful shinny sky.png');
         background-size:cover;
         
         
