--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
     <style>
       body {
         display: block;
-        color: black;
+        color: white;
         margin: 5px;
         background-image: url('Weatherbg.jpg');
         background-size:cover;
